# CVora.ai

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  status.txt
Deletefile/: TemplateFour.tsx  TemplateOne.tsx  TemplateTwo.tsx
client/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.css  App.tsx  Code.md  data.json  main.tsx
client/src/Layout/: PageLayout.tsx
client/src/components/: Hero.tsx  HeroSection.tsx  Navbar.tsx  NavigationBar.tsx  ResumeTemplateCard.tsx  TemplateCard.tsx
client/src/constants/: index.ts
server/: Dockerfile  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 0b2e4d5b9b75_update_template_table_and_its_data.py  14eea1647412_update_template_table_and_its_data.py  3600fa92b896_initial_tables.py  7fc0560393bc_update_template_table_and_its_data.py  83bd2be2a62c_initial_migration.py  a55a390ce8d9_initial_migration.py  d0db810fe08b_update_template_table_and_its_data.py
server/app/: main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: ai.py  auth.py  resume.py  templates.py  user.py
server/app/core/: config.py  dependencies.py  loggers.py  security.py
server/app/db/: redis_client.py  session.py
server/app/model/: credit.py  resume.py  tenplates.py  user.py
server/app/schema/: schemas.py
server/app/services/: ai_services.py  credit_services.py  job_services.py
server/logs/: app_structured.json
server/resume/: __init__.py  routes.py  utils.py
(+46 files in other folders)
