[project]
name = "server"
version = "0.1.0"
description = "AI RESUME BUILDER"
authors = [
    {name = "Paresh-Mistry",email = "pareshkmistry04@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "weasyprint (>=69.0,<70.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "openai (>=2.41.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (==5.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
